Tables are now prevented from getting too squashed on game page

--- a/src/styles/gamePage.scss
+++ b/src/styles/gamePage.scss
@@ -15,6 +15,7 @@ h2, h3, td, th {
     flex-direction: row;
     column-gap: 20px;
     row-gap: 20px;
+    flex-wrap: wrap;
 
     @media (max-width: $mobileScreenSize) {
         flex-direction: column;
@@ -22,6 +23,10 @@ h2, h3, td, th {
 
     div {
         flex: 1 1 0px;
+
+        @media (max-width: 1020px) {
+            flex-basis: 33%;
+        }
 
         table {
             width: 80%;
